src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Birthday__c</fullName>
        <label>Next Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Photo__c</fullName>
        <defaultValue>&quot;https://pbs.twimg.com/profile_images/745409545456001024/5C-su2e4_400x400.jpg&quot;</defaultValue>
        <label>Photo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receive_Birthday_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Receive Birthday Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Birthday_Email_System__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Reset Birthday Email System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialization__c</fullName>
        <label>Specialization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Date_of_birth__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>all_item</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Phone__c</columns>
        <columns>Street__c</columns>
        <filterScope>Everything</filterScope>
        <label>all_item</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Empty_Last_Name</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
        <errorMessage>You should type last name</errorMessage>
    </validationRules>
</CustomObject>